@@ -2995,13 +2995,19 @@ ZEND_DLEXPORT zend_op_array* eaccelerator_compile_file(zend_file_handle *file_ha
   fprintf(F_fp, "[%d] compile_file: \"%s\"\n",getpid(), file_handle->filename); fflush(F_fp);
   MMCG(xpad)+=2;
 #endif
+  compile_time = time(0);
+  if (buf.st_mtime <= compile_time && eaccelerator_debug > 0) {
+	debug_printf("[%d] EACCELERATOR: \"%s\" isn't cached because it's mtime is in the future.\n", 
+		getpid(), file_handle->filename);
+  }
+
   if (!MMCG(enabled) ||
       (eaccelerator_mm_instance == NULL) ||
       !eaccelerator_mm_instance->enabled ||
       file_handle == NULL ||
       file_handle->filename == NULL ||
       eaccelerator_stat(file_handle, realname, &buf TSRMLS_CC) != 0 ||
-      buf.st_mtime >= (compile_time = time(0)) ||
+      buf.st_mtime >= compile_time ||
 #ifdef EACCELERATOR_USE_INODE
       0) {
 #else
