@@ -1,4 +1,10 @@
+2005-06-23 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+
+        * Added a warning message when php scripts have a modification time in
+          in the future and the debug is enabled.
+
 2005-06-20 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+
         * Set the test value shared memory to 32mb instead of 64mb because the
           test will fail on 2.6 kernels where 32mb is the default value. (#1203253)
         * Reverted the patch for the gc_maxlifetime setting when using
